syntax = "proto3";

package config;

option go_package = "./config";

import "google/protobuf/empty.proto";

service ConfigService {
    rpc GetConfig (google.protobuf.Empty) returns (ConfigResponse);
}

message ConfigResponse {
    int32 min_price = 1;
}
